Bug 243215: use proper API calls instead of the registry to obtain system parameters, patch by Ryan Jones <sciguyryan+bugzilla@gmail.com>, r+sr=roc